# playstore-review-sentiment-nb

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
ai_plan/: playstore_reviews_implementation_plan.md  playstore_reviews_model_spec.md
models/: playstore_review_sentiment_metrics.json  playstore_review_sentiment_model.joblib
reports/: model_evaluation_report.md
src/: app.py  explore.ipynb
